--- a/app/src/main/res/layout/fragment_calendar_date.xml
+++ b/app/src/main/res/layout/fragment_calendar_date.xml
@@ -56,6 +56,19 @@
                     app:description="@{viewModel.weatherForecastDescription}"
                     app:windSpeed='@{String.format("%.1f%s", viewModel.weatherForecastForDate.windSpeed, @string/meters_per_second)}'
                     app:humidity='@{String.format("%d%s", viewModel.weatherForecastForDate.humidity, "%")}' />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/eventListView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintTop_toBottomOf="@id/title"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toStartOf="@id/weatherForecastView"
+                    android:layout_marginTop="8dp"
+                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                    tools:listitem="@layout/calendar_event_list_item"
+                    app:booleanVisibility="@{viewModel.isMemorableDatesVisible()}"
+                    android:visibility="gone"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
