--- a/app/src/main/res/layout/fragment_location_selection.xml
+++ b/app/src/main/res/layout/fragment_location_selection.xml
@@ -58,6 +58,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:scrollbars="vertical"
             tools:listitem="@layout/location_list_item" />
 
         <ProgressBar
