--- a/app/src/main/res/layout/fragment_main_notes.xml
+++ b/app/src/main/res/layout/fragment_main_notes.xml
@@ -59,6 +59,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="16dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:scrollbars="vertical"
             tools:listitem="@layout/main_note_list_item"
             app:booleanVisibility="@{viewModel.isNotesVisible()}" />
 
