--- a/app/src/main/res/layout/fragment_memorable_dates.xml
+++ b/app/src/main/res/layout/fragment_memorable_dates.xml
@@ -59,6 +59,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="16dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:scrollbars="vertical"
             tools:listitem="@layout/memorable_date_list_item"
             app:booleanVisibility="@{viewModel.isDatesVisible()}" />
 
