--- a/app/src/main/res/layout/fragment_post_addresses.xml
+++ b/app/src/main/res/layout/fragment_post_addresses.xml
@@ -73,6 +73,7 @@
             app:layout_constraintTop_toBottomOf="@id/addPostAddressButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            android:scrollbars="vertical"
             tools:listitem="@layout/post_address_list_item"
             app:booleanVisibility="@{viewModel.isAddressListVisible()}" />
 
