--- a/app/src/main/res/layout/main_note_list_item.xml
+++ b/app/src/main/res/layout/main_note_list_item.xml
@@ -11,6 +11,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="4dp"
         android:paddingBottom="8dp">
 
         <com.example.lifediary.ui.common.RollOutTextPanel
