--- a/app/src/main/res/layout/post_address_list_item.xml
+++ b/app/src/main/res/layout/post_address_list_item.xml
@@ -13,6 +13,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:clickable="true">
