--- a/app/src/main/res/layout/shopping_list_item.xml
+++ b/app/src/main/res/layout/shopping_list_item.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
         android:padding="8dp"
         android:background="@drawable/background_shopping_list_item">
 
