--- a/app/src/main/res/layout/calendar_day_layout.xml
+++ b/app/src/main/res/layout/calendar_day_layout.xml
@@ -29,13 +29,23 @@
         tools:text="24" />
 
     <View
+        android:id="@+id/eventIcon"
+        android:layout_width="6dp"
+        android:layout_height="6dp"
+        app:layout_constraintBottom_toTopOf="@id/dayText"
+        app:layout_constraintStart_toStartOf="@id/dayText"
+        app:layout_constraintEnd_toEndOf="@id/dayText"
+        android:background="@drawable/calendar_day_event_icon_view"
+        android:visibility="invisible" />
+
+    <View
         android:id="@+id/noteIcon"
         android:layout_width="6dp"
         android:layout_height="6dp"
         app:layout_constraintTop_toBottomOf="@id/dayText"
         app:layout_constraintStart_toStartOf="@id/dayText"
         app:layout_constraintEnd_toEndOf="@id/dayText"
-        android:background="@drawable/note_icon_view_for_calendar_day"
+        android:background="@drawable/calendar_day_note_icon_view"
         android:visibility="invisible" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
