Calendar screen: added legends

--- a/app/src/main/res/layout/fragment_add_edit_memorable_date.xml
+++ b/app/src/main/res/layout/fragment_add_edit_memorable_date.xml
@@ -62,7 +62,7 @@
 
         <TextView
             android:id="@+id/yearInputHint"
-            style="@style/Text.InputHint"
+            style="@style/Text.Hint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/yearInput"
