--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -64,7 +64,7 @@
         <item name="android:ellipsize">end</item>
     </style>
 
-    <style name="Text.InputHint">
+    <style name="Text.Hint">
         <item name="android:textSize">14sp</item>
     </style>
 
