--- a/app/src/main/res/layout/memorable_date_list_item.xml
+++ b/app/src/main/res/layout/memorable_date_list_item.xml
@@ -63,6 +63,20 @@
                 android:text="@string/today"
                 app:booleanVisibility="@{viewModel.isTodayTitleVisible}" />
 
+            <TextView
+                android:id="@+id/howManyYearsAgoView"
+                style="@style/Text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/dateView"
+                app:layout_constraintStart_toStartOf="parent"
+                android:ellipsize="marquee"
+                android:singleLine="true"
+                android:textSize="14sp"
+                android:textColor="@color/app_medium_gray"
+                android:text="@{String.format(@string/years_ago, viewModel.yearsAgo)}"
+                app:booleanVisibility="@{viewModel.isHowManyYearsAgoViewVisible}" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <ImageButton
