--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -36,7 +36,7 @@
                 app:layout_constraintTop_toTopOf="@id/legendEventIconText"
                 app:layout_constraintBottom_toBottomOf="@id/legendEventIconText"
                 app:layout_constraintStart_toStartOf="parent"
-                android:background="@drawable/calendar_day_event_icon_view" />
+                android:src="@drawable/calendar_day_event_icon_view" />
 
             <ImageView
                 android:id="@+id/legendNoteToDoListIcon"
@@ -45,7 +45,7 @@
                 app:layout_constraintTop_toTopOf="@id/legendNoteToDoListIconText"
                 app:layout_constraintBottom_toBottomOf="@id/legendNoteToDoListIconText"
                 app:layout_constraintStart_toStartOf="parent"
-                android:background="@drawable/calendar_day_note_icon_view" />
+                android:src="@drawable/calendar_day_note_icon_view" />
 
             <TextView
                 android:id="@+id/legendEventIconText"
