Calendar date screen: realized selection to-do list item to enable notification

--- a/app/src/main/res/layout/to_do_list_item.xml
+++ b/app/src/main/res/layout/to_do_list_item.xml
@@ -80,6 +80,6 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/icon_notification_gray" />
+            android:background="@{viewModel.notificationEnabled ? @drawable/icon_notification_orange : @drawable/icon_notification_gray}" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
