Calendar date screen: realized showing notification time in to-do list

--- a/app/src/main/res/layout/to_do_list_item.xml
+++ b/app/src/main/res/layout/to_do_list_item.xml
@@ -24,7 +24,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/deleteButton">
+            app:layout_constraintEnd_toStartOf="@id/notificationTimeView">
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/doneIconsContainer"
                 android:layout_width="24dp"
@@ -69,8 +69,7 @@
             android:layout_height="24dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/notificationButton"
-            android:layout_marginEnd="4dp"
+            app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/icon_delete_gray" />
 
         <ImageButton
@@ -79,7 +78,23 @@
             android:layout_height="24dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/deleteButton"
+            android:layout_marginEnd="4dp"
             android:background="@{viewModel.notificationEnabled ? @drawable/icon_notification_orange : @drawable/icon_notification_gray}" />
+
+        <TextView
+            android:id="@+id/notificationTimeView"
+            style="@style/Text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/notificationButton"
+            android:layout_marginEnd="4dp"
+            android:textColor="@color/app_medium_gray"
+            android:textSize="14sp"
+            tools:text="06:05"
+            android:text="@{viewModel.notificationTime}"
+            app:booleanVisibility="@{viewModel.notificationEnabled}" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
