--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -11,24 +11,23 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        style="@style/ScreenContainer">
+        style="@style/ScreenContainerWithoutTopPadding">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/locationContainer"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="@id/settingsButton"
-            app:layout_constraintBottom_toBottomOf="@id/settingsButton"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/settingsButton"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:onClick="@{() -> viewModel.onLocationClick()}">
             <ImageView
                 android:id="@+id/locationIcon"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="20dp"
+                android:layout_height="20dp"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 android:src="@drawable/icon_location_blue" />
 
@@ -37,7 +36,7 @@
                 style="@style/Text.Location"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintBottom_toBottomOf="@id/locationIcon"
+                app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/locationIcon"
                 app:layout_constraintEnd_toEndOf="parent"
                 tools:text="Санкт-Петербург"
@@ -70,13 +69,13 @@
             app:humidity='@{String.format("%d%s", viewModel.currentWeather.humidity, "%")}'
             app:progressVisibility="@{viewModel.isCurrentWeatherProgressVisible()}" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/settingsButton"
             android:layout_width="48dp"
             android:layout_height="48dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:src="@drawable/icon_settings_gray"
+            android:background="@drawable/icon_settings_gray"
             android:clickable="true"
             android:onClick="@{() -> viewModel.onSettingsClick()}"/>
 
