--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -72,6 +72,12 @@
         <item name="android:padding">16dp</item>
     </style>
 
+    <style name="ScreenContainerWithoutTopPadding">
+        <item name="android:paddingStart">16dp</item>
+        <item name="android:paddingEnd">16dp</item>
+        <item name="android:paddingBottom">16dp</item>
+    </style>
+
     <style name="ProgressBar">
         <item name="android:layout_width">42dp</item>
         <item name="android:layout_height">42dp</item>
