--- a/app/src/main/res/layout/shopping_list_item.xml
+++ b/app/src/main/res/layout/shopping_list_item.xml
@@ -69,7 +69,8 @@
                 android:layout_height="24dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/deleteButton"
+                android:layout_marginEnd="4dp"
                 android:background="@drawable/icon_high_priority_gray" />
 
             <ImageButton
@@ -78,8 +79,7 @@
                 android:layout_height="24dp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@id/setHighPriorityButton"
-                android:layout_marginEnd="4dp"
+                app:layout_constraintEnd_toEndOf="parent"
                 android:background="@drawable/icon_delete_gray" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
