Calendar date screen: changed weather forecast view design

--- a/app/src/main/res/layout/weather_forecast_view.xml
+++ b/app/src/main/res/layout/weather_forecast_view.xml
@@ -6,8 +6,7 @@
     android:id="@+id/container"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="8dp"
-    android:background="@drawable/background_substrate_light_gray">
+    android:padding="8dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/temperatureContainer"
