--- a/app/src/main/res/layout/main_note_list_item.xml
+++ b/app/src/main/res/layout/main_note_list_item.xml
@@ -16,29 +16,10 @@
 
         <com.example.lifediary.ui.common.RollOutTextPanel
             android:id="@+id/noteView"
-            android:layout_width="0dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/editNoteButton"
-            android:layout_marginEnd="8dp"
             app:text="@{viewModel.mainNoteListItem.text}" />
-
-        <ImageButton
-            android:id="@+id/editNoteButton"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:layout_constraintTop_toTopOf="@id/noteView"
-            app:layout_constraintEnd_toStartOf="@id/deleteNoteButton"
-            android:background="@drawable/icon_edit_blue" />
-
-        <ImageButton
-            android:id="@+id/deleteNoteButton"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            app:layout_constraintTop_toTopOf="@id/noteView"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:background="@drawable/icon_delete_red" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
