--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -85,6 +85,25 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 android:text="@string/display_section_memorable_dates" />
 
+            <com.google.android.material.switchmaterial.SwitchMaterial
+                android:id="@+id/womanSectionSwitch"
+                android:layout_width="wrap_content"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="@id/womanSectionSwitchTitle"
+                app:layout_constraintBottom_toBottomOf="@id/womanSectionSwitchTitle"
+                app:layout_constraintStart_toStartOf="parent"
+                android:checked="@{viewModel.isWomanSectionEnabled()}" />
+
+            <TextView
+                android:id="@+id/womanSectionSwitchTitle"
+                style="@style/Text.SettingsScreenMenuItem"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/memorableDatesSectionSwitchTitle"
+                app:layout_constraintStart_toEndOf="@id/womanSectionSwitch"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:text="@string/display_section_for_women" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
