--- a/app/src/main/res/layout/fragment_woman_section.xml
+++ b/app/src/main/res/layout/fragment_woman_section.xml
@@ -12,14 +12,14 @@
         android:layout_height="match_parent"
         style="@style/ScreenContainer">
 
-        <TextView
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            android:text="Woman section" />
+            android:onClick="@{() -> viewModel.onAddMenstruationClick()}"
+            android:text="@string/add_menstruation_dates" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
