--- a/app/src/main/res/layout/fragment_woman_section.xml
+++ b/app/src/main/res/layout/fragment_woman_section.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="viewModel"
@@ -11,6 +12,24 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         style="@style/ScreenContainer">
+
+        <TextView
+            android:id="@+id/lastMenstruationTitle"
+            style="@style/Text.MainControlsHint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:text="@string/last_menstruation" />
+
+        <TextView
+            android:id="@+id/lastMenstruationDates"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/lastMenstruationTitle"
+            app:layout_constraintStart_toStartOf="@id/lastMenstruationTitle"
+            tools:text="19.02.2022 - 24.02.2022"
+            android:text="@{viewModel.addedMenstruationDates}" />
 
         <Button
             android:layout_width="wrap_content"
