--- a/app/src/main/res/layout/fragment_woman_section.xml
+++ b/app/src/main/res/layout/fragment_woman_section.xml
@@ -29,9 +29,10 @@
             app:layout_constraintTop_toBottomOf="@id/lastMenstruationTitle"
             app:layout_constraintStart_toStartOf="@id/lastMenstruationTitle"
             tools:text="19.02.2022 - 24.02.2022"
-            android:text="@{viewModel.addedMenstruationDates}" />
+            android:text="@{viewModel.lastMenstruationDates.toOutputFormattedString()}" />
 
         <Button
+            android:id="@+id/addMenstruationDatesButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
