--- a/app/src/main/res/layout/fragment_woman_section.xml
+++ b/app/src/main/res/layout/fragment_woman_section.xml
@@ -15,7 +15,7 @@
 
         <TextView
             android:id="@+id/lastMenstruationTitle"
-            style="@style/Text.MainControlsHint"
+            style="@style/Text.ScreenSubtitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
@@ -24,6 +24,7 @@
 
         <TextView
             android:id="@+id/lastMenstruationDates"
+            style="@style/Text.MediumGray"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/lastMenstruationTitle"
