Section For Women: realized clearing of menstruation dates list

--- a/app/src/main/res/layout/menstruation_dates_list_item.xml
+++ b/app/src/main/res/layout/menstruation_dates_list_item.xml
@@ -14,7 +14,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:padding="8dp">
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp">
 
         <TextView
             android:id="@+id/titleView"
@@ -25,7 +26,6 @@
             app:layout_constraintBottom_toBottomOf="@id/deleteButton"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/deleteButton"
-            android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
             android:gravity="start|center_vertical"
             tools:text="19.02.2022 - 24.02.2022"
