--- a/app/src/main/res/layout/fragment_menstruation_dates_list.xml
+++ b/app/src/main/res/layout/fragment_menstruation_dates_list.xml
@@ -13,10 +13,22 @@
         android:layout_height="match_parent"
         style="@style/ScreenContainer">
 
+        <ImageButton
+            android:id="@+id/clearAllButton"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/icon_delete_sweep_color_link"
+            android:onClick="@{() -> viewModel.onClearMenstruationDatesListClick()}" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/menstruationDatesListView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/clearAllButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:scrollbars="vertical"
             tools:listitem="@layout/menstruation_dates_list_item" />
