--- a/app/src/main/res/layout/fragment_menstruation_dates_list.xml
+++ b/app/src/main/res/layout/fragment_menstruation_dates_list.xml
@@ -22,16 +22,39 @@
             android:background="@drawable/icon_delete_sweep_color_link"
             android:onClick="@{() -> viewModel.onClearMenstruationDatesListClick()}" />
 
+        <TextView
+            android:id="@+id/title"
+            style="@style/Text.ScreenTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="@id/clearAllButton"
+            app:layout_constraintBottom_toBottomOf="@id/clearAllButton"
+            app:layout_constraintStart_toEndOf="@id/clearAllButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="16dp"
+            android:text="@string/menses" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/menstruationDatesListView"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             app:layout_constraintTop_toBottomOf="@id/clearAllButton"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/addMenstruationDatesButton"
             android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:scrollbars="vertical"
             tools:listitem="@layout/menstruation_dates_list_item" />
+
+        <ImageButton
+            android:id="@+id/addMenstruationDatesButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/icon_plus_green"
+            android:onClick="@{() -> viewModel.onAddMenstruationClick()}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
