--- a/app/src/main/res/layout/fragment_woman_section.xml
+++ b/app/src/main/res/layout/fragment_woman_section.xml
@@ -21,6 +21,7 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/menstruationDatesListButton"
+            android:layout_marginEnd="8dp"
             android:text="@string/last_menstruation" />
 
         <TextView
@@ -31,6 +32,7 @@
             app:layout_constraintTop_toBottomOf="@id/lastMenstruationTitle"
             app:layout_constraintStart_toStartOf="@id/lastMenstruationTitle"
             app:layout_constraintEnd_toStartOf="@id/menstruationDatesListButton"
+            android:layout_marginEnd="8dp"
             tools:text="19.02.2022 - 24.02.2022"
             android:text="@{viewModel.lastMenstruationDates.toOutputFormattedString()}" />
 
@@ -43,6 +45,40 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:background="@drawable/icon_list_blue"
             android:onClick="@{() -> viewModel.onShowMenstruationDatesListClick()}" />
+
+        <TextView
+            android:id="@+id/lengthOfMenstrualCycleTitle"
+            style="@style/Text.ScreenSubtitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/lastMenstruationDates"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/editLengthOfMenstrualCycleButton"
+            android:layout_marginTop="16dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/length_of_menstrual_cycle" />
+
+        <TextView
+            android:id="@+id/lengthOfMenstrualCycle"
+            style="@style/Text.MediumGray"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/lengthOfMenstrualCycleTitle"
+            app:layout_constraintStart_toStartOf="@id/lengthOfMenstrualCycleTitle"
+            app:layout_constraintEnd_toStartOf="@id/editLengthOfMenstrualCycleButton"
+            android:layout_marginEnd="8dp"
+            tools:text="28 дн."
+            android:text="@{String.format(@string/n_days, viewModel.lengthOfMenstrualCycle)}" />
+
+        <ImageButton
+            android:id="@+id/editLengthOfMenstrualCycleButton"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            app:layout_constraintTop_toTopOf="@id/lengthOfMenstrualCycleTitle"
+            app:layout_constraintStart_toStartOf="@id/menstruationDatesListButton"
+            app:layout_constraintEnd_toEndOf="@id/menstruationDatesListButton"
+            android:background="@drawable/icon_edit_blue"
+            android:onClick="@{() -> viewModel.onSetLengthOfMenstrualCycleClick()}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
