--- a/app/src/main/res/layout/fragment_woman_section.xml
+++ b/app/src/main/res/layout/fragment_woman_section.xml
@@ -34,7 +34,7 @@
             app:layout_constraintEnd_toStartOf="@id/menstruationDatesListButton"
             android:layout_marginEnd="8dp"
             tools:text="19.02.2022 - 24.02.2022"
-            android:text="@{viewModel.lastMenstruationDates.toOutputFormattedString()}" />
+            android:text="@{viewModel.lastMenstruationDates.toOutputFormattedString() ?? @string/no_added_menses}" />
 
         <ImageButton
             android:id="@+id/menstruationDatesListButton"
