--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -36,6 +36,7 @@
                 app:layout_constraintTop_toTopOf="@id/legendEventIconText"
                 app:layout_constraintBottom_toBottomOf="@id/legendEventIconText"
                 app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="3dp"
                 android:src="@drawable/calendar_day_event_icon_view" />
 
             <ImageView
@@ -44,8 +45,18 @@
                 android:layout_height="6dp"
                 app:layout_constraintTop_toTopOf="@id/legendNoteToDoListIconText"
                 app:layout_constraintBottom_toBottomOf="@id/legendNoteToDoListIconText"
-                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintStart_toStartOf="@id/legendEventIcon"
                 android:src="@drawable/calendar_day_note_icon_view" />
+
+            <ImageView
+                android:id="@+id/legendMenstruationPeriodIcon"
+                android:layout_width="12dp"
+                android:layout_height="12dp"
+                app:layout_constraintTop_toTopOf="@id/legendMenstruationPeriodText"
+                app:layout_constraintBottom_toBottomOf="@id/legendMenstruationPeriodText"
+                app:layout_constraintStart_toStartOf="parent"
+                android:src="@drawable/icon_leaf_lilac"
+                app:booleanVisibility="@{viewModel.isSectionForWomanVisible()}" />
 
             <TextView
                 android:id="@+id/legendEventIconText"
@@ -54,7 +65,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/legendEventIcon"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="12dp"
                 android:text="@string/event" />
 
             <TextView
@@ -63,9 +74,18 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/legendEventIconText"
-                app:layout_constraintStart_toEndOf="@id/legendNoteToDoListIcon"
-                android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="@id/legendEventIconText"
                 android:text="@string/note_or_to_do_list" />
+
+            <TextView
+                android:id="@+id/legendMenstruationPeriodText"
+                style="@style/Text.Hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/legendNoteToDoListIconText"
+                app:layout_constraintStart_toStartOf="@id/legendEventIconText"
+                android:text="@string/period_of_menstruation"
+                app:booleanVisibility="@{viewModel.isSectionForWomanVisible()}" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
