Calendar screen: fixed design (symbols for menstruation periods)

--- a/app/src/main/res/layout/calendar_day_layout.xml
+++ b/app/src/main/res/layout/calendar_day_layout.xml
@@ -7,6 +7,13 @@
     android:layout_height="36dp">
 
     <View
+        android:id="@+id/menstruationIcon"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/icon_leaf_lilac_23"
+        android:visibility="visible" />
+
+    <View
         android:id="@+id/selectedBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -47,13 +54,4 @@
         app:layout_constraintEnd_toEndOf="@id/dayText"
         android:background="@drawable/calendar_day_note_icon_view"
         android:visibility="invisible" />
-
-    <View
-        android:id="@+id/menstruationIcon"
-        android:layout_width="12dp"
-        android:layout_height="12dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/icon_leaf_lilac"
-        android:visibility="visible" />
 </androidx.constraintlayout.widget.ConstraintLayout>
