--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -36,7 +36,7 @@
                 app:layout_constraintTop_toTopOf="@id/legendEventIconText"
                 app:layout_constraintBottom_toBottomOf="@id/legendEventIconText"
                 app:layout_constraintStart_toStartOf="parent"
-                android:layout_marginStart="3dp"
+                android:layout_marginStart="10dp"
                 android:src="@drawable/calendar_day_event_icon_view" />
 
             <ImageView
@@ -50,12 +50,12 @@
 
             <ImageView
                 android:id="@+id/legendMenstruationPeriodIcon"
-                android:layout_width="12dp"
-                android:layout_height="12dp"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
                 app:layout_constraintTop_toTopOf="@id/legendMenstruationPeriodText"
                 app:layout_constraintBottom_toBottomOf="@id/legendMenstruationPeriodText"
                 app:layout_constraintStart_toStartOf="parent"
-                android:src="@drawable/icon_leaf_lilac"
+                android:src="@drawable/icon_leaf_lilac_50"
                 app:booleanVisibility="@{viewModel.isSectionForWomanVisible()}" />
 
             <TextView
@@ -65,7 +65,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@id/legendEventIcon"
-                android:layout_marginStart="12dp"
+                android:layout_marginStart="18dp"
                 android:text="@string/event" />
 
             <TextView
@@ -75,6 +75,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/legendEventIconText"
                 app:layout_constraintStart_toStartOf="@id/legendEventIconText"
+                android:layout_marginTop="8dp"
                 android:text="@string/note_or_to_do_list" />
 
             <TextView
@@ -84,6 +85,7 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/legendNoteToDoListIconText"
                 app:layout_constraintStart_toStartOf="@id/legendEventIconText"
+                android:layout_marginTop="8dp"
                 android:text="@string/period_of_menstruation"
                 app:booleanVisibility="@{viewModel.isSectionForWomanVisible()}" />
 
