Section for women: estimated next menstruation period is displayed on calendar

--- a/app/src/main/res/layout/calendar_day_layout.xml
+++ b/app/src/main/res/layout/calendar_day_layout.xml
@@ -14,6 +14,13 @@
         android:visibility="visible" />
 
     <View
+        android:id="@+id/estimatedNextMenstruationIcon"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/icon_leaf_light_blue"
+        android:visibility="visible" />
+
+    <View
         android:id="@+id/selectedBackground"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
