--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -55,7 +55,17 @@
                 app:layout_constraintTop_toTopOf="@id/legendMenstruationPeriodText"
                 app:layout_constraintBottom_toBottomOf="@id/legendMenstruationPeriodText"
                 app:layout_constraintStart_toStartOf="parent"
-                android:src="@drawable/icon_leaf_lilac_50"
+                android:src="@drawable/icon_leaf_lilac_40"
+                app:booleanVisibility="@{viewModel.isSectionForWomanVisible()}" />
+
+            <ImageView
+                android:id="@+id/legendEstimatedNextMenstruationPeriodIcon"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                app:layout_constraintTop_toTopOf="@id/legendEstimatedNextMenstruationPeriodText"
+                app:layout_constraintBottom_toBottomOf="@id/legendEstimatedNextMenstruationPeriodText"
+                app:layout_constraintStart_toStartOf="parent"
+                android:src="@drawable/icon_leaf_light_blue"
                 app:booleanVisibility="@{viewModel.isSectionForWomanVisible()}" />
 
             <TextView
@@ -87,6 +97,17 @@
                 app:layout_constraintStart_toStartOf="@id/legendEventIconText"
                 android:layout_marginTop="8dp"
                 android:text="@string/period_of_menstruation"
+                app:booleanVisibility="@{viewModel.isSectionForWomanVisible()}" />
+
+            <TextView
+                android:id="@+id/legendEstimatedNextMenstruationPeriodText"
+                style="@style/Text.Hint"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/legendMenstruationPeriodText"
+                app:layout_constraintStart_toStartOf="@id/legendEventIconText"
+                android:layout_marginTop="8dp"
+                android:text="@string/next_period_of_menstruation"
                 app:booleanVisibility="@{viewModel.isSectionForWomanVisible()}" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
