--- a/app/src/main/res/layout/fragment_woman_section.xml
+++ b/app/src/main/res/layout/fragment_woman_section.xml
@@ -121,7 +121,6 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/durationOfMenstruationPeriod"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
             android:text="@string/next_menstruation" />
 
         <TextView
@@ -131,9 +130,20 @@
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/estimatedStartOfNextMenstruationPeriodTitle"
             app:layout_constraintStart_toStartOf="@id/estimatedStartOfNextMenstruationPeriodTitle"
-            android:layout_marginEnd="8dp"
             tools:text="20.03.2022 - 25.03.2022"
             android:text="@{viewModel.estimatedNextMenstruationPeriod.toOutputFormattedString() ?? @string/no_data}" />
+
+        <TextView
+            android:id="@+id/delayOfMenstruation"
+            style="@style/Text.MediumGray"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/estimatedStartOfNextMenstruationPeriod"
+            app:layout_constraintStart_toStartOf="@id/estimatedStartOfNextMenstruationPeriod"
+            android:layout_marginTop="16dp"
+            tools:text="Задержка: 2 дн."
+            android:text="@{String.format(@string/delay_of_menstruation, viewModel.delayOfMenstruation)}"
+            app:booleanVisibility="@{viewModel.delayOfMenstruationVisibility}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
