--- a/app/src/main/res/layout/calendar_event_list_item.xml
+++ b/app/src/main/res/layout/calendar_event_list_item.xml
@@ -1,40 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:toos="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:toos="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="viewModel"
             type="com.example.lifediary.adapters.CalendarEventListAdapter.CalendarEventListItemViewModel" />
     </data>
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="4dp">
-
-        <ImageView
-            android:id="@+id/circleIcon"
-            android:layout_width="3dp"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toTopOf="@id/nameView"
-            app:layout_constraintBottom_toBottomOf="@id/nameView"
-            app:layout_constraintStart_toStartOf="parent"
-            android:src="@drawable/background_calendar_date_screen_event_icon" />
+        android:paddingTop="4dp"
+        android:paddingBottom="4dp"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/nameView"
             style="@style/Text"
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@id/circleIcon"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="4dp"
             android:textSize="14sp"
+            android:gravity="center_vertical"
             android:text="@{viewModel.event.name}"
-            toos:text="День рождения маман" />
+            toos:text="День рождения маман"
+            app:drawableStartCompat="@drawable/icon_speaker_blue"
+            android:drawablePadding="4dp" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
 </layout>
